--- a/3-reviews/setup/index.html
+++ b/3-reviews/setup/index.html
@@ -13,7 +13,41 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <!-- title -->
+        <div class="title">
+          <h2>Our Reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- review -->
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="" />
+          </div>
+          <h4 id="author">sara jones</h4>
+          <p id="job">ux designer</p>
+          <p id="info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vero
+            omnis amet, similique quam sint sunt blanditiis at quisquam quidem
+            quis saepe fuga laborum dolorem minima distinctio, sit illum harum.
+          </p>
+
+          <!-- prev and next buttons -->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <!-- random button -->
+          <button class="random-btn">Surprise me</button>
+        </article>
+      </section>
+    </main>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
