--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -9,7 +9,55 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift-pic" />
+      </article>
+      <article class="gift-info">
+        <h3>Old Iphone Giveaway</h3>
+        <h4 class="giveaway">Give away ends on Sunday 24 April 2020 8:00 am</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos odit
+          quidem, vero excepturi voluptate iste eligendi, natus soluta libero
+          quisquam quis! Inventore ab aut culpa perferendis architecto
+          temporibus repellat enim!
+        </p>
+        <div class="deadline">
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- end of days -->
+          <!-- days -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">34</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- end of days -->
+          <!-- minutes -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="minutes">34</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- end of days -->
+          <!-- minutes -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="seconds">34</h4>
+              <span>secs</span>
+            </div>
+          </div>
+          <!-- end of days -->
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
