--- a/8-menu/setup/index.html
+++ b/8-menu/setup/index.html
@@ -13,7 +13,43 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <div class="title">
+        <h2>Our Menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter Buttons -->
+      <div class="btn-container">
+        <!-- <button class="filter-btn" type="button" data-id="all">all</button>
+        <button class="filter-btn" type="button" data-id="breakfast">
+          BreakFast
+        </button>
+        <button class="filter-btn" type="button" data-id="lunch">Lunch</button>
+        <button class="filter-btn" type="button" data-id="shakes">
+          Shakes
+        </button> -->
+      </div>
+      <!-- Menu Items -->
+      <div class="section-center">
+        <!-- single item-->
+        <!-- <article class="menu-item">
+          <img src="./menu-item.jpeg" class="photo" alt="menu" />
+          <div class="item-info">
+            <header>
+              <h4>Buttermilk Pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+              sint, ab saepe rerum temporibus nisi odio voluptates fuga tempore!
+              Quasi eum aut reprehenderit aliquid perspiciatis cum amet fuga,
+              soluta laboriosam.
+            </p>
+          </div>
+        </article> -->
+        <!-- end of single item-->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
